# file-analyser-utils

./: LICENSE  README.md  pyproject.toml
csv/: README.md  csv_analyser.py  pyproject.toml
parquet/: README.md  parquet_analyser.py  pyproject.toml
