[project]
name = "parquet-analyser"
version = "0.1.0"
description = "A command-line utility to count lines and analyse field consistency in PARQUET files."
authors = [
    { name = "Anthony Dowling" }
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy",
    "pandas",
    "pyarrow"
]

[project.scripts]
parquet-analyser = "parquet_analyser:main"

[tool.uv]
# UV-specific options can go here (currently minimal config is needed)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
